Hero Section Added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,54 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>FLOWER STORE</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body class="open-sans">
-  <h1>Bangladesh Is A Poor Country</h1>
+  <header>
+    <nav class="nav-section">
+      <section class="nav-items">
+        <div class="website-logo">
+          <img src="/assets/logo.png" alt="">
+        </div>
+        <div class="nav-link">
+          <ul>
+            <li><a href="" class="home-link">Home</a></li>
+          </ul>
+          <ul>
+            <li><a href="" class="Shop-about">Shop</a></li>
+          </ul>
+          <ul>
+            <li><a href="" class="Shop-about">About us </a></li>
+          </ul>
+          <ul>
+            <li><a href=""> <i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
+          </ul>
+        </div>
+      </section>
+    </nav>
+  </header>
+  <main>
+    <section class="hero-section">
+      <div class="hero-text">
+        <h2 class="text-6xl font-bold max-w-150 cursor-default">ALWAYS <span>FRESH</span></h2>
+        <h3 class="text-6xl font-bold max-w-150 mt-5 mb-5 cursor-default"><span>FLOWERS</span></h3>
+        <p class="max-w-150 cursor-default">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+          From
+          classic
+          roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+      </div>
+      <div class="hero-photo">
+        <img src="/assets/hero-flower.png" alt="">
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
