--- a/index.html
+++ b/index.html
@@ -53,6 +53,79 @@
         <img src="/assets/hero-flower.png" alt="">
       </div>
     </section>
+    <section class="Plants-section">
+      <div class="Plant-text">
+        <h2 class="text-5xl font-bold text-center"><span>Our</span> Plants</h2>
+        <p class="max-w-158 text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+          From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+      </div>
+      <div class="Plants-card">
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="card-1">
+          <img src="/assets/sample-flower-image.png" alt="">
+          <div class="card-text">
+            <h4 class="Plant-title">Lily Blossom</h4>
+            <p class="price">20 USD</p>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
