Plants Lover Section Added

--- a/index.html
+++ b/index.html
@@ -126,6 +126,40 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="plants-lover-section">
+        <div>
+          <img src="assets/flower-store.png" alt="">
+        </div>
+        <div class="plants-lover-text">
+          <img id="badge-photo" src="/assets/trusted-badge.png" alt="">
+          <h1>Flower & Plants Lover</h1>
+          <ul>
+            <li class="inter">Indulge your senses with the beauty and fragrance of our <span class="text-style">fresh
+                flower shop. From classic roses to exotic blooms, we <span class="text-style">offer a wide variety of
+                  fresh.</span></span></li> <br>
+            <li class="inter">Indulge your senses with the beauty and fragrance of our <span class="text-style">fresh
+                flower shop. From classic roses to exotic blooms, we <span class="text-style">offer a wide variety of
+                  fresh.</span></span></li> <br>
+            <li class="inter">Indulge your senses with the beauty and fragrance of our <span class="text-style">fresh
+                flower shop. From classic roses to exotic blooms, we <span class="text-style">offer a wide variety of
+                  fresh.</span></span></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="join-section">
+      <div>
+        <div>
+          <h2>Join the colorful Bunch</h2>
+        </div>
+        <form action="">
+          <input type="email" name="" id="" placeholder="uherggyghrj">
+          <button type="submit"></button>
+        </form>
+      </div>
+
+    </section>
   </main>
   <footer>
 
