jOine Section Added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     <section class="Plants-section">
       <div class="Plant-text">
-        <h2 class="text-5xl font-bold text-center"><span>Our</span> Plants</h2>
+        <h2 style="cursor: default;" class="text-5xl font-bold text-center "><span>Our</span> Plants</h2>
         <p class="max-w-158 text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop.
           From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
       </div>
@@ -149,16 +149,11 @@
       </div>
     </section>
     <section class="join-section">
-      <div>
-        <div>
-          <h2>Join the colorful Bunch</h2>
-        </div>
-        <form action="">
-          <input type="email" name="" id="" placeholder="uherggyghrj">
-          <button type="submit"></button>
-        </form>
+      <div class="join-items">
+        <h2 class="join-title">Join the colorful Bunch</h2>
+        <input class="join-input" type="email" name="" id="" required placeholder="Write email">
+        <button class="btn join-btn" type="submit">Subscribe</button>
       </div>
-
     </section>
   </main>
   <footer>
