Footer Section Added

--- a/index.html
+++ b/index.html
@@ -155,9 +155,36 @@
         <button class="btn join-btn" type="submit">Subscribe</button>
       </div>
     </section>
+
   </main>
   <footer>
+    <section class="section-footer">
+      <div class="logo-img-footer">
+        <img id="footer-photo" src="assets/logo.png" alt="">
+        <p id="footer-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+      </div>
+      <div>
+        <a class="link-a" href="">Home</a>
+        <a class="link-a" href="">About Us</a>
+        <a class="link-a" href="">Blog</a>
+        <a class="link-a" href="">FAQ</a>
+        <a class="link-a" href="">Contact Us</a>
+      </div>
+      <div>
+        <a class="link-a" href="">Features</a>
+        <a class="link-a" href="">Pricing</a>
+        <a class="link-a" href="">Privacy Policy</a>
+        <a class="link-a" href="">Terms of Service</a>
+        <a class="link-a" href="">Help Center</a>
+      </div>
+      <div class="footer-logo">
+        <img src="assets/icon-linkedin.png" alt="">
+        <img src="assets/icons8-whatsapp-48.png" alt="">
+        <img src="assets/icon-facebook.png" alt="">
+        <img src="assets/icon-youtube.png" alt="">
 
+      </div>
+    </section>
   </footer>
 </body>
 
