Latest  Deals Section Added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="website-logo">
           <img src="/assets/logo.png" alt="">
         </div>
-        <div class="nav-link">
+        <div class="nav-link ">
           <ul>
             <li><a href="" class="home-link">Home</a></li>
           </ul>
@@ -146,6 +146,39 @@
                   fresh.</span></span></li>
           </ul>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="latest-section">
+        <div>
+          <h2>
+            <span>Latest</span> Deals
+          </h2>
+          <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+            blooms, we offer a wide variety of fresh.</p>
+        </div>
+      </div>
+    </section>
+    <section class="plant-photo-section">
+      <div>
+        <div class="plant-photo-title photo-1 photo-opacity">
+          <h4 class="off-title">60% Off | Bloom Plant</h4>
+          <a class="plant-link" href="#">Shop Now
+            <hr style="max-width: 79px; margin-left: 70px;">
+          </a>
+        </div>
+        <div class="plant-photo-title photo-2">
+          <h4 class="off-title">30% Off | Ana Plant</h4>
+          <a class="plant-link" href="#">Shop Now
+            <hr style="max-width: 79px; margin-left: 70px;">
+          </a>
+        </div>
+      </div>
+      <div class="plant-photo-title photo-3">
+        <h4 class="Off-style">25% Off | Zabo Plant</h4>
+        <a class="plant-link" href="#">Shop Now
+          <hr style="max-width: 79px; margin-left: 167px;">
+        </a>
       </div>
     </section>
     <section class="join-section">
