--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         <div class="nav-link ">
           <ul>
-            <li><a href="" class="home-link">Home</a></li>
+            <li><a href="" class="home-link hidden lg:block md:block">Home</a></li>
           </ul>
           <ul>
-            <li><a href="" class="Shop-about">Shop</a></li>
+            <li><a href="" class="hidden lg:block md:block Shop-about">Shop</a></li>
           </ul>
           <ul>
-            <li><a href="" class="Shop-about">About us </a></li>
+            <li><a href="" class="hidden lg:block md:block Shop-about">About us </a></li>
           </ul>
           <ul>
             <li><a href=""> <i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
@@ -126,13 +126,12 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="">
       <div class="plants-lover-section">
         <div>
           <img src="assets/flower-store.png" alt="">
         </div>
         <div class="plants-lover-text">
-          <img id="badge-photo" src="/assets/trusted-badge.png" alt="">
           <h1>Flower & Plants Lover</h1>
           <ul>
             <li class="inter">Indulge your senses with the beauty and fragrance of our <span class="text-style">fresh
@@ -148,7 +147,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="">
       <div class="latest-section">
         <div>
           <h2>
@@ -159,25 +158,25 @@
         </div>
       </div>
     </section>
-    <section class="plant-photo-section">
+    <section class="plant-photo-section ">
       <div>
         <div class="plant-photo-title photo-1 photo-opacity">
           <h4 class="off-title">60% Off | Bloom Plant</h4>
           <a class="plant-link" href="#">Shop Now
-            <hr style="max-width: 79px; margin-left: 70px;">
+            <hr style="max-width: 79px; margin-left: 93px;">
           </a>
         </div>
         <div class="plant-photo-title photo-2">
           <h4 class="off-title">30% Off | Ana Plant</h4>
           <a class="plant-link" href="#">Shop Now
-            <hr style="max-width: 79px; margin-left: 70px;">
+            <hr style="max-width: 79px; margin-left: 93px;">
           </a>
         </div>
       </div>
       <div class="plant-photo-title photo-3">
         <h4 class="Off-style">25% Off | Zabo Plant</h4>
         <a class="plant-link" href="#">Shop Now
-          <hr style="max-width: 79px; margin-left: 167px;">
+          <hr style="max-width: 79px; margin-left: 94px;">
         </a>
       </div>
     </section>
@@ -185,12 +184,11 @@
       <div class="join-items">
         <h2 class="join-title">Join the colorful Bunch</h2>
         <input class="join-input" type="email" name="" id="" required placeholder="Write email">
-        <button class="btn join-btn" type="submit">Subscribe</button>
+        <button class="btn join-btn subscribe-btn" type="submit">Subscribe</button>
       </div>
     </section>
-
   </main>
-  <footer>
+  <footer class="">
     <section class="section-footer">
       <div class="logo-img-footer">
         <img id="footer-photo" src="assets/logo.png" alt="">
