Complete Responsip Website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>FLOWER STORE</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body class="open-sans">
@@ -20,7 +20,7 @@
     <nav class="nav-section">
       <section class="nav-items">
         <div class="website-logo">
-          <img src="/assets/logo.png" alt="">
+          <img src="assets/logo.png" alt="">
         </div>
         <div class="nav-link ">
           <ul>
