Complete Responsip Website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>FLOWER STORE</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body class="open-sans">
@@ -20,7 +20,7 @@
     <nav class="nav-section">
       <section class="nav-items">
         <div class="website-logo">
-          <img src="assets/logo.png" alt="">
+          <img src="/assets/logo.png" alt="">
         </div>
         <div class="nav-link ">
           <ul>
@@ -129,7 +129,7 @@
     <section class="">
       <div class="plants-lover-section">
         <div>
-          <img src="assets/flower-store.png" alt="">
+          <img src="/assets/flower-store.png" alt="">
         </div>
         <div class="plants-lover-text">
           <h1>Flower & Plants Lover</h1>
@@ -191,7 +191,7 @@
   <footer class="">
     <section class="section-footer">
       <div class="logo-img-footer">
-        <img id="footer-photo" src="assets/logo.png" alt="">
+        <img id="footer-photo" src="/assets/logo.png" alt="">
         <p id="footer-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
       </div>
       <div>
@@ -209,10 +209,10 @@
         <a class="link-a" href="">Help Center</a>
       </div>
       <div class="footer-logo">
-        <img src="assets/icon-linkedin.png" alt="">
-        <img src="assets/icons8-whatsapp-48.png" alt="">
-        <img src="assets/icon-facebook.png" alt="">
-        <img src="assets/icon-youtube.png" alt="">
+        <img src="/assets/icon-linkedin.png" alt="">
+        <img src="/assets/icons8-whatsapp-48.png" alt="">
+        <img src="/assets/icon-facebook.png" alt="">
+        <img src="/assets/icon-youtube.png" alt="">
 
       </div>
     </section>
