Complete Responsip Website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>FLOWER STORE</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body class="open-sans">
@@ -20,7 +20,7 @@
     <nav class="nav-section">
       <section class="nav-items">
         <div class="website-logo">
-          <img src="/assets/logo.png" alt="">
+          <img src="assets/logo.png" alt="">
         </div>
         <div class="nav-link ">
           <ul>
@@ -50,7 +50,7 @@
           roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
       </div>
       <div class="hero-photo">
-        <img src="/assets/hero-flower.png" alt="">
+        <img src="assets/hero-flower.png" alt="">
       </div>
     </section>
     <section class="Plants-section">
@@ -61,7 +61,7 @@
       </div>
       <div class="Plants-card">
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="card-1">
-          <img src="/assets/sample-flower-image.png" alt="">
+          <img src="assets/sample-flower-image.png" alt="">
           <div class="card-text">
             <h4 class="Plant-title">Lily Blossom</h4>
             <p class="price">20 USD</p>
@@ -129,7 +129,7 @@
     <section class="">
       <div class="plants-lover-section">
         <div>
-          <img src="/assets/flower-store.png" alt="">
+          <img src="assets/flower-store.png" alt="">
         </div>
         <div class="plants-lover-text">
           <h1>Flower & Plants Lover</h1>
@@ -191,7 +191,7 @@
   <footer class="">
     <section class="section-footer">
       <div class="logo-img-footer">
-        <img id="footer-photo" src="/assets/logo.png" alt="">
+        <img id="footer-photo" src="assets/logo.png" alt="">
         <p id="footer-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
       </div>
       <div>
@@ -209,10 +209,10 @@
         <a class="link-a" href="">Help Center</a>
       </div>
       <div class="footer-logo">
-        <img src="/assets/icon-linkedin.png" alt="">
-        <img src="/assets/icons8-whatsapp-48.png" alt="">
-        <img src="/assets/icon-facebook.png" alt="">
-        <img src="/assets/icon-youtube.png" alt="">
+        <img src="assets/icon-linkedin.png" alt="">
+        <img src="assets/icons8-whatsapp-48.png" alt="">
+        <img src="assets/icon-facebook.png" alt="">
+        <img src="assets/icon-youtube.png" alt="">
 
       </div>
     </section>
