Complete Responsip Website

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <img src="assets/flower-store.png" alt="">
         </div>
         <div class="plants-lover-text">
+          <img id="badge-photo" class="hidden-photo" src="assets/trusted-badge.png" alt="">
           <h1>Flower & Plants Lover</h1>
           <ul>
             <li class="inter">Indulge your senses with the beauty and fragrance of our <span class="text-style">fresh
